--- a/template/index.html
+++ b/template/index.html
@@ -1,28 +1,38 @@
-<html>
-  <script>
-    async function handleClick() {
-      let response = await fetch("https://YOUR_LAMBDA_URL_HERE");
-      let text = await response.text();
-      document.getElementById("response").innerHTML = text;
-      document.getElementById("img").src = 'https://images.unsplash.com/photo-1540573133985-87b6da6d54a9';
-    }
-  </script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Button for Lambda</title>
+    <script>
+      async function handleClick() {
+        let response = await fetch("https://YOUR_LAMBDA_URL_HERE");
+        let text = await response.text();
+        document.getElementById("response").innerHTML = text;
+        document.getElementById("img").src = 'https://images.unsplash.com/photo-1540573133985-87b6da6d54a9';
+      }
+    </script>
+    <style>
+      .center{
+        margin: auto;
+        width: 80%;
+      }
+    </style>
+  </head>
   <body>
-    <div align="center">
-      <br /><br /><br /><br />
+    <div class="center">
+      <br><br><br><br>
       <h1>
-        Hello </span
-        ><span id="response">all! What happens when you click on the button below?</span>
+        Hello <span id="response">all! What happens when you click on the button below?</span>
       </h1>
 
-      <button onclick="handleClick()">Click me</button><br />
-      <br /><br />
+      <button type="button" onclick="handleClick()">Click me</button><br>
+      <br><br>
       <img
         id="img"
         width="1000"
         height="1000"
         src="https://images.unsplash.com/photo-1529247833802-700f53170380"
-      />
+        alt="monkey"
+      >
     </div>
   </body>
 </html>
